# SimpleS3

./: .dockerignore  .gitignore  ADMIN.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.flowci/: ci.flow
.github/workflows/: ci.yml
crates/simples3-cli/: Cargo.toml
crates/simples3-cli/src/: main.rs
crates/simples3-cli/src/commands/: bucket.rs  credentials.rs
crates/simples3-core/: Cargo.toml
crates/simples3-core/src/: config.rs  error.rs  init.rs  lib.rs
crates/simples3-core/src/auth/: credentials.rs  mod.rs  sigv4.rs
crates/simples3-core/src/s3/: mod.rs  policy.rs  request.rs  types.rs  xml.rs
crates/simples3-core/src/storage/: filesystem.rs  metadata.rs  mod.rs
crates/simples3-server/: Cargo.toml
crates/simples3-server/src/: lib.rs  main.rs  metrics.rs  router.rs
crates/simples3-server/src/handlers/: admin.rs  bucket.rs  cors.rs  health.rs  lifecycle.rs  mod.rs  multipart.rs  object.rs  policy.rs
crates/simples3-server/src/middleware/: admin_auth.rs  auth.rs  cors.rs  host_rewrite.rs  metrics.rs  mod.rs
crates/simples3-server/tests/: admin_api.rs  auth.rs  bucket_ops.rs  cors.rs  health_metrics.rs  init.rs  lifecycle.rs  multipart.rs  object_ops.rs  policy.rs  presigned.rs  virtual_host.rs
crates/simples3-server/tests/common/: mod.rs
doc/: ADMIN.md  CORS.md  LIFECYCLE.md  POLICIES.md  SECURITY.md
tests/: e2e.sh
