[workspace]
members = ["crates/simples3-core", "crates/simples3-server", "crates/simples3-cli"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
quick-xml = "0.37"
percent-encoding = "2"
