[package]
name = "simples3-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
simples3-core = { path = "../simples3-core" }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tabled = "0.17"
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { workspace = true }
